<resources>
    <string name="app_name">作業四之一:王方顯</string>
    <string name="sex">性別</string>
    <string name="age">年齡</string>
    <string name="btnOK">確定</string>
    <string name="suggestion">建議:</string>
    <string-array name="age_list">
        <item>(男)小於30歲,(女)小於28歲</item>
        <item>(男)30到40歲,(女)28到35歲</item>
        <item>(男)大於40歲,(女)大於35歲</item>
    </string-array>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="music">音樂</string>
    <string name="sing">唱歌</string>
    <string name="dance">跳舞</string>
    <string name="travel">旅行</string>
    <string name="reading">閱讀</string>
    <string name="writing">寫作</string>
    <string name="climbing">爬山</string>
    <string name="swim">游泳</string>
    <string name="eating">美食</string>
    <string name="drawing">繪畫</string>
    <string name="hobbies">興趣</string>
    <string name="yourhobbies">你的興趣:</string>
</resources>
